[KINGS-2] commit the framework by design 2

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>luns framework by Spring Boot</description>
 
     <modules>
+        <module>kings-spring-boot</module>
         <module>kings-framework-common</module>
         <module>kings-framework-dependency</module>
         <!--分布式标准和实现-->
