--- a/kings-schedule-common/pom.xml
+++ b/kings-schedule-common/pom.xml
@@ -8,17 +8,17 @@
         <artifactId>kings-framework</artifactId>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>kings-spring-boot</artifactId>
-    <description>luns framework dependency by Spring Boot</description>
+    <artifactId>kings-schedule-common</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jetty</artifactId>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo-shaded</artifactId>
+            <version>4.0.2</version>
         </dependency>
     </dependencies>
 </project>
