[KINGS-2] docker images

--- a/kings-docker/src/main/resources/application.yml
+++ b/kings-docker/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 logging:
   level.com.kings.framework.docker: debug
+spring:
+  application:
+    name: kings-docker
+octopus:
+  amethyst:
+    client:
+      task:
+        enable: true
+        servers: localhost:6000
