--- a/kings-docker/Dockerfile-server
+++ b/kings-docker/Dockerfile-server
@@ -2,4 +2,5 @@ FROM java:8
 COPY ./target/zatech-gaia-amethyst-server.jar /root/startup/
 WORKDIR /root/startup/
 EXPOSE 8080
-ENTRYPOINT exec java ${JVM_OPTS:- -Xdebug -Xms1024m -Xmx1024m} -Dspring.active.profile=local -jar /root/startup/zatech-gaia-amethyst-server.jar
+EXPOSE 6000
+ENTRYPOINT exec java ${JVM_OPTS:- -Xdebug -Xms124m -Xmx124m} -Dspring.active.profile=local -jar /root/startup/zatech-gaia-amethyst-server.jar
