--- a/kings-framework-zookeeper/pom.xml
+++ b/kings-framework-zookeeper/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kings-docker</artifactId>
+    <artifactId>kings-framework-zookeeper</artifactId>
     <parent>
         <groupId>com.kings</groupId>
         <artifactId>kings-framework</artifactId>
@@ -11,18 +11,22 @@
     </parent>
     <!--default dependency management-->
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>5.1.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>5.1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
         <dependency>
-            <groupId>com.lmax</groupId>
-            <artifactId>disruptor</artifactId>
-            <version>3.4.2</version>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>5.0.0-RC9</version>
         </dependency>
     </dependencies>
     <build>
