--- a/kings-base/pom.xml
+++ b/kings-base/pom.xml
@@ -12,5 +12,18 @@
 
     <!--default dependency management-->
     <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.gitlab4j</groupId>
+            <artifactId>gitlab4j-api</artifactId>
+            <version>4.16.0</version>
+        </dependency>
     </dependencies>
 </project>
