[KINGS-3] build server for jenkins

--- a/kings-docker/pom.xml
+++ b/kings-docker/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>disruptor</artifactId>
             <version>3.4.2</version>
         </dependency>
+        <!--jenkins-java-client-->
+        <dependency>
+            <groupId>com.offbytwo.jenkins</groupId>
+            <artifactId>jenkins-client</artifactId>
+            <version>0.3.8</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
