--- a/kings-docker/Dockerfile
+++ b/kings-docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8
-COPY ./target/kings-docker.jar /root/startup/app.jar
+COPY ./target/app.jar /root/startup/app.jar
 WORKDIR /root/startup/
 EXPOSE 8080
 ENTRYPOINT exec java ${JVM_OPTS:- -Xdebug -Xms124m -Xmx124m} -jar /root/startup/app.jar
