--- a/kings-docker/pom.xml
+++ b/kings-docker/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>client-java</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${name}</finalName>
